--- a/examples/index.html
+++ b/examples/index.html
@@ -70,6 +70,12 @@
           <div class="example-description">Animated clear color cycling through the color spectrum - demonstrates continuous rendering</div>
         </a>
       </li>
+      <li class="example-item">
+        <a href="./grid-test/index.html" class="example-link">
+          <div class="example-title">Grid Renderer Test</div>
+          <div class="example-description">Interactive grid renderer with configurable line counts - demonstrates grid rendering and clip-space coordinates</div>
+        </a>
+      </li>
     </ul>
   </div>
 </body>
