--- a/examples/candlestick-streaming/index.html
+++ b/examples/candlestick-streaming/index.html
@@ -16,8 +16,8 @@
         <span class="logo-badge">WebGPU</span>
       </div>
       <div class="symbol-info">
-        <span class="symbol-name">BTC/USD</span>
-        <span id="current-price" class="current-price" data-price="0">$67,500.00</span>
+        <span class="symbol-name">MEME/USD</span>
+        <span id="current-price" class="current-price" data-price="0">$100.00</span>
       </div>
       <div class="timeframes">
         <button class="timeframe-btn active" data-tf="1s">1s</button>
@@ -43,7 +43,7 @@
       </div>
       <div class="stat">
         <span class="stat-label">Candles</span>
-        <span id="stat-candles" class="stat-value">10,000</span>
+        <span id="stat-candles" class="stat-value">60</span>
       </div>
       <div class="stat">
         <span class="stat-label">Tick Rate</span>
@@ -56,6 +56,7 @@
       <div class="stat-separator"></div>
       <button id="toggle-btn" class="control-btn">▶ Start</button>
       <button id="style-btn" class="control-btn secondary">Style: Classic</button>
+      <button id="autoscroll-btn" class="control-btn secondary toggle-active">📍 Auto-Scroll: ON</button>
     </div>
 
     <!-- Chart Container -->
@@ -63,7 +64,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <span>Powered by WebGPU • 10,000+ candles • 75 ticks/sec simulated feed</span>
+      <span>Powered by WebGPU • Big visible candles • Real-time streaming</span>
       <a href="https://github.com/hunterg325/ChartGPU" target="_blank" rel="noopener noreferrer">GitHub</a>
     </footer>
   </div>
