Add candle count presets and improve configuration handling
- Introduced a new section for candle count presets in the UI, allowing users to easily switch between different candle counts (60, 1K, 10K, 50K, 100K, 1M, 5M).
- Updated the configuration to make the candle count mutable, enhancing user control over the displayed data.
- Improved data zoom configuration based on the selected candle count for better visualization.
- Adjusted footer text to reflect the new candle scaling options.

--- a/examples/candlestick-streaming/index.html
+++ b/examples/candlestick-streaming/index.html
@@ -54,6 +54,17 @@
         <span id="stat-total-ticks" class="stat-value">0</span>
       </div>
       <div class="stat-separator"></div>
+      <div class="candle-presets">
+        <span class="preset-label">Candles:</span>
+        <button class="preset-btn active" data-count="60">60</button>
+        <button class="preset-btn" data-count="1000">1K</button>
+        <button class="preset-btn" data-count="10000">10K</button>
+        <button class="preset-btn" data-count="50000">50K</button>
+        <button class="preset-btn" data-count="100000">100K</button>
+        <button class="preset-btn" data-count="1000000">1M</button>
+        <button class="preset-btn" data-count="5000000">5M</button>
+      </div>
+      <div class="stat-separator"></div>
       <button id="toggle-btn" class="control-btn">▶ Start</button>
       <button id="style-btn" class="control-btn secondary">Style: Classic</button>
       <button id="autoscroll-btn" class="control-btn secondary toggle-active">📍 Auto-Scroll: ON</button>
@@ -64,7 +75,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <span>Powered by WebGPU • Big visible candles • Real-time streaming</span>
+      <span>Powered by WebGPU • Scale from 60 to 5M candles • Real-time streaming</span>
       <a href="https://github.com/hunterg325/ChartGPU" target="_blank" rel="noopener noreferrer">GitHub</a>
     </footer>
   </div>
